<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:cardBackgroundColor="@android:color/white"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="10dp"
    android:layout_marginTop="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/dateImage"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/dateImage"
            android:src="@drawable/ic_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meeting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:text="@string/meetingName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/meeting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/dateImage"
            app:layout_constraintTop_toBottomOf="@+id/meeting_name" />

        <ImageView
            android:id="@+id/clockImage"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/clockImage"
            android:src="@drawable/ic_baseline_time_24"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meeting_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/start_time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/clockImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeSeperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/timeSeperator"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/meeting_startTime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meeting_endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/end_time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/timeSeperator"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>