<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateContactActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/contactHeader_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/update_contact"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contact_name_update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/contact_name"
        android:ems="10"
        android:hint="@string/contact_name"
        android:inputType="textNoSuggestions"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactHeader_update" />

    <TextView
        android:id="@+id/name_error_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/contact_name_update"
        app:layout_constraintTop_toBottomOf="@+id/contact_name_update" />

    <EditText
        android:id="@+id/contact_number_update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/contact_number"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/contact_name_update"
        app:layout_constraintStart_toStartOf="@+id/contact_name_update"
        app:layout_constraintTop_toBottomOf="@+id/contact_name_update"
        android:autofillHints="@string/contact_number" />

    <TextView
        android:id="@+id/number_error_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/contact_number_update"
        app:layout_constraintTop_toBottomOf="@+id/contact_number_update" />


</androidx.constraintlayout.widget.ConstraintLayout>